@@ -1,4 +1,4 @@
-#	$NetBSD: Makefile,v 1.61.2.4 2001/04/05 23:25:55 he Exp $
+#	$NetBSD: Makefile,v 1.61.2.5 2002/09/27 07:24:40 itojun Exp $
 #	from: @(#)Makefile	5.25.1.1 (Berkeley) 5/7/91
 
 .include <bsd.own.mk>
@@ -25,6 +25,10 @@ SUBDIR+= libkstream
 .if (${MKCRYPTO_IDEA} != "no")
 SUBDIR+= libcrypto_idea
 .endif	# MKCRYPTO_IDEA != no
+
+.if (${MKCRYPTO_MDC2} != "no")
+SUBDIR+= libcrypto_mdc2
+.endif	# MKCRYPTO_MDC2 != no
 
 .if (${MKCRYPTO_RC5} != "no")
 SUBDIR+= libcrypto_rc5
