@@ -1,4 +1,4 @@
-#	$NetBSD: bsd.README,v 1.63.4.2 2000/10/07 01:14:23 itojun Exp $
+#	$NetBSD: bsd.README,v 1.63.4.3 2002/09/27 07:24:42 itojun Exp $
 #	@(#)bsd.README	8.2 (Berkeley) 4/2/94
 
 This is the README file for the new make "include" files for the BSD
@@ -245,6 +245,9 @@ MKCRYPTO_IDEA	If set to "yes", IDEA support will be built into
 		libcrypto_idea.a.  Defaults to "no".
 
 NOCRYPTO_IDEA	Obsoleted; no effect.
+
+MKCRYPTO_MDC2	If set to "yes", MDC2 support will be built into
+		libcrypto_mdc2.a.  Defaults to "no".
 
 MKCRYPTO_RC5	If set to "yes", RC5 support will be built into
 		libcrypto_rc5.a.  Defaults to "no".
