@@ -1,4 +1,4 @@
-#	$NetBSD: CHANGES-1.5.4,v 1.1.2.57 2002/09/24 13:44:20 itojun Exp $
+#	$NetBSD: CHANGES-1.5.4,v 1.1.2.58 2002/09/27 07:24:39 itojun Exp $
 
 A complete list of changes from NetBSD 1.5.3 to NetBSD 1.5.4:
 
@@ -1533,3 +1533,14 @@ usr.sbin/lpr/lpd/lpd.c				1.43 via patch
 
   Set IPV6_BINDV6ONLY socket option for AF_INET6 socket, to avoid
   complicated access control issue due to IPv4 mapped address.
+
+lib/Makefile					1.78
+lib/libcrypto/mdc2.inc				1.5
+lib/libcrypto/mdc2dgst_dummy.c			1.1 (new)
+lib/libcrypto_mdc2/Makefile			1.1 (new)
+share/mk/bsd.README				1.105 via patch
+share/mk/bsd.own.mk				1.312 via patch
+usr.bin/openssl/Makefile			1.16-1.17
+
+  MDC2 is a patented algorithm; don't ship it in default libcrypto.
+  MKCRYPTO_MDC2 will build a separate library, libcrypto_mdc2.
